# dhbwtinf20it1schedule

./: CMakeLists.txt  README.md  stundenplan.cpp
snap/: snapcraft.yaml
src/: main.cpp
